--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+   <meta charset="UTF-8">
+   <title> FATOS FANTARTISTICOS </title>
+</head>
+
+
+<body>
 <h1> FATOS FANTARTISTICOS </h1>
 
-<P> formação da profissão é de licenciatura,  dura entre 1 a 2 anos, serve de canal de informação para 
-os alunos sobre as técnicas da arte, as vantagens são sobre o conhecimento adquirido.
- <P> As desvantagens sobre o salário, a media é de 4.420,55 R$ e tem como faculdades mais
-próximas a UniCV, UniFatecie, UniVitória.</P>
+   <P> formação da profissão é de licenciatura, dura entre 1 a 2 anos, serve de canal de informação para 
+   os alunos sobre as técnicas da arte, as vantagens são sobre o conhecimento adquirido.
+   <P> As desvantagens sobre o salário, a media é de 4.420,55 R$ e tem como faculdades mais
+   próximas a UniCV, UniFatecie, UniVitória.</P>
+</body>
+</html>
