--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <h1> FATOS FANTARTISTICOS </h1>
 
-<br> <P> formação da profissão é de licenciatura, dura entre 1 a 2 anos, serve de canal de informação para
+ <P> formação da profissão é de licenciatura, dura entre 1 a 2 anos, serve de canal de informação<br> para
    os alunos sobre as técnicas da arte, as vantagens são sobre o conhecimento adquirido.</br>
    <P> As desvantagens sobre o salário, a media é de 4.420,55 R$ e tem como faculdades mais
    <br> próximas a UniCV, UniFatecie, UniVitória.</P> </br>
