--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
  <P>  A formação da profissão é de licenciatura, dura entre 1 a 2 anos, serve de canal de informação<br> para
    os alunos sobre as técnicas da arte, as vantagens são sobre o conhecimento adquirido.</br>
    <P>  As desvantagens sobre o salário, a media é de 4.420,55 R$ e tem como faculdades mais
-   <br> próximas a UniCV, UniFatecie, UniVitória. Concordamos que ser professor de Arte é uma profissão incrivel pois propaga conhecimento sobre a arte.</P> </br>
+   <br> próximas a UniCV, UniFatecie, UniVitória.
+    Concordamos que ser professor de Arte é uma profissão incrivel pois propaga conhecimento sobre a arte.</P> </br>
 
 </body>
 </html>
