--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    os alunos sobre as técnicas da arte, as vantagens são sobre o conhecimento adquirido.</br>
    <P>  As desvantagens sobre o salário, a media é de 4.420,55 R$ e tem como faculdades mais
    <br> próximas a UniCV, UniFatecie, UniVitória.
-    Concordamos que ser professor de Arte é uma profissão incrivel pois propaga conhecimento sobre a arte.</P> </br>
+   <br> Concordamos que ser professor de Arte é uma profissão incrivel pois propaga conhecimento sobre a arte.</P> </br>
 
 </body>
 </html>
